fix routes and fix update advertisement

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
   <body>
     <script type="text/javascript">
       $(document).ready(function () {
-        $("*").bind("cut copy paste contextmenu", function (e) {
+        $("*").bind("cut copy contextmenu", function (e) {
           e.preventDefault();
         });
       });
