--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/logo.png"
+    />
     <!-- Notice the use of %PUBLIC_URL% in the tags above. -->
 
     <!-- Bootstrap CSS -->
@@ -56,12 +59,6 @@
     <!-- Custom -->
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
     <title>Tototo Milk Tea</title>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-    <script>
-      (function () {
-        emailjs.init("user_YO5xArGi32BdsNeUGC882"); // Obtain your user ID at the dashboard https://dashboard.emailjs.com/integration
-      })();
-    </script>
   </head>
 
   <body>
