--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,10 @@
       $(window).bind("scroll", function () {
         if ($(window).scrollTop() > 100) {
           $("#onTopBtn").css("display", "block");
+          $("#navbar-header").addClass('fixed-top');
         } else {
           $("#onTopBtn").css("display", "none");
+          $("#navbar-header").removeClass('fixed-top');
         }
       });
     </script>
